--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,50 @@
-.App {
+/* .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+} */
+.header{
+  background-color: #AB2918;
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  position: sticky;
+  top: 0;
 }
+
+.App-logo {
+  height: 40vmin;
+}
+
+.App{
+	/* background: white; */
+	padding-top: 15px;
+	background-color: #white;
+	/* position: relative;
+	width: 100%;
+	min-height: 100vh;
+	display: -ms-flexbox; 
+	display: flex;
+	-ms-flex-pack: center;
+	justify-content: center; */
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
+}
+
+
 
 .App-link {
   color: #09d3ac;
+}
+
+img{
+	height: 150px;
+	width: auto;
+	margin: 5px;
 }
